--- a/src/scss/_body.scss
+++ b/src/scss/_body.scss
@@ -9,74 +9,6 @@ body,html{
     font-size: 14px;
   }
 }
-@keyframes textShadow {
-  0% {
-    text-shadow: 0.4389924193300864px 0 1px rgba(0,30,255,0.2), -0.4389924193300864px 0 1px rgba(255,0,80,0.1), 0 0 3px;
-  }
-  5% {
-    text-shadow: 2.7928974010788217px 0 1px rgba(0,30,255,0.2), -2.7928974010788217px 0 1px rgba(255,0,80,0.1), 0 0 3px;
-  }
-  10% {
-    text-shadow: 0.02956275843481219px 0 1px rgba(0,30,255,0.2), -0.02956275843481219px 0 1px rgba(255,0,80,0.1), 0 0 3px;
-  }
-  15% {
-    text-shadow: 0.40218538552878136px 0 1px rgba(0,30,255,0.2), -0.40218538552878136px 0 1px rgba(255,0,80,0.1), 0 0 3px;
-  }
-  20% {
-    text-shadow: 3.4794037899852017px 0 1px rgba(0,30,255,0.2), -3.4794037899852017px 0 1px rgba(255,0,80,0.1), 0 0 3px;
-  }
-  25% {
-    text-shadow: 1.6125630401149584px 0 1px rgba(0,30,255,0.2), -1.6125630401149584px 0 1px rgba(255,0,80,0.1), 0 0 3px;
-  }
-  30% {
-    text-shadow: 0.7015590085143956px 0 1px rgba(0,30,255,0.2), -0.7015590085143956px 0 1px rgba(255,0,80,0.1), 0 0 3px;
-  }
-  35% {
-    text-shadow: 3.896914047650351px 0 1px rgba(0,30,255,0.2), -3.896914047650351px 0 1px rgba(255,0,80,0.1), 0 0 3px;
-  }
-  40% {
-    text-shadow: 3.870905614848819px 0 1px rgba(0,30,255,0.2), -3.870905614848819px 0 1px rgba(255,0,80,0.1), 0 0 3px;
-  }
-  45% {
-    text-shadow: 2.231056963361899px 0 1px rgba(0,30,255,0.2), -2.231056963361899px 0 1px rgba(255,0,80,0.1), 0 0 3px;
-  }
-  50% {
-    text-shadow: 0.08084290417898504px 0 1px rgba(0,30,255,0.2), -0.08084290417898504px 0 1px rgba(255,0,80,0.1), 0 0 3px;
-  }
-  55% {
-    text-shadow: 2.3758461067427543px 0 1px rgba(0,30,255,0.2), -2.3758461067427543px 0 1px rgba(255,0,80,0.1), 0 0 3px;
-  }
-  60% {
-    text-shadow: 2.202193051050636px 0 1px rgba(0,30,255,0.2), -2.202193051050636px 0 1px rgba(255,0,80,0.1), 0 0 3px;
-  }
-  65% {
-    text-shadow: 2.8638780614874975px 0 1px rgba(0,30,255,0.2), -2.8638780614874975px 0 1px rgba(255,0,80,0.1), 0 0 3px;
-  }
-  70% {
-    text-shadow: 0.48874025155497314px 0 1px rgba(0,30,255,0.2), -0.48874025155497314px 0 1px rgba(255,0,80,0.1), 0 0 3px;
-  }
-  75% {
-    text-shadow: 1.8948491305757957px 0 1px rgba(0,30,255,0.2), -1.8948491305757957px 0 1px rgba(255,0,80,0.1), 0 0 3px;
-  }
-  80% {
-    text-shadow: 0.0833037308038857px 0 1px rgba(0,30,255,0.2), -0.0833037308038857px 0 1px rgba(255,0,80,0.1), 0 0 3px;
-  }
-  85% {
-    text-shadow: 0.09769827255241735px 0 1px rgba(0,30,255,0.2), -0.09769827255241735px 0 1px rgba(255,0,80,0.1), 0 0 3px;
-  }
-  90% {
-    text-shadow: 3.443339761481782px 0 1px rgba(0,30,255,0.2), -3.443339761481782px 0 1px rgba(255,0,80,0.1), 0 0 3px;
-  }
-  95% {
-    text-shadow: 2.1841838852799786px 0 1px rgba(0,30,255,0.2), -2.1841838852799786px 0 1px rgba(255,0,80,0.1), 0 0 3px;
-  }
-  100% {
-    text-shadow: 2.6208764473832513px 0 1px rgba(0,30,255,0.2), -2.6208764473832513px 0 1px rgba(255,0,80,0.1), 0 0 3px;
-  }
-}
-.crt {
-  animation: textShadow 1.6s infinite;
-}
 @keyframes spin{
   0%{
     transform: translate(-50%, -50%) rotate(0deg);
@@ -85,50 +17,18 @@ body,html{
     transform: translate(-50%, -50%) rotate(360deg);
   }
 }
-@keyframes glitch {
-  0% {
-    transform: translate(0)
-  }
-  20% {
-    transform: translate(-2px, 2px)
-  }
-  40% {
-    transform: translate(-2px, -2px)
-  }
-  60% {
-    transform: translate(2px, 2px)
-  }
-  80% {
-    transform: translate(2px, -2px)
-  }
-  to {
-    transform: translate(0)
-  }
-}
 .loader{
   position: relative;
   z-index: 99999;
   transition: .2s ease-out;
-  &:before, &:after{
-    content: '';
-  }
-  &:before{
-    position: fixed;
-    z-index: 9;
-    left: 0;
-    top: 0;
-    height: 100vh;
-    width: 100vw;
-    background: white;
-  }
   &:after{
-    width: 64px;
-    height: 64px;
+    content: '';
+    width: 32px;
+    height: 32px;
     position: fixed;
-    left: 50%;
+    left: 32px;
     z-index: 10;
-    top: 50%;
-    transform: translate(-50%, -50%);
+    top: 32px;
     border-top: 2px solid #222;
     border-radius: 50%;
     animation: spin 1s ease-in-out infinite;
@@ -155,73 +55,30 @@ section{
   height: 100%;
   width: 100%;
 }
-.puzzle_container{
-  display: flex;
-  flex-direction: column;
-}
-.intro_btn_container{
+
+.intro_btn{
   position: absolute;
-  width: 50px;
-  height: 50px;
-  overflow: hidden;
-  cursor: pointer;
-  transform: translate(-50%);
   left: 50%;
+  transform: translateX(-50%);
+  border-radius: 2px;
+  padding: 10px 15px;
+  border: 1px solid #222;
+  transition: background .2s ease-in-out, color .1s ease-out;
   bottom: 50px;
-  .intro_btn{
-    background: transparent;
-    width: 100%;
-    pointer-events: none;
-    position: absolute;
-    box-sizing:border-box;
-    height: 100%;
-    border: 2px solid #222;
-    perspective: 1000px;
-    transition: .2s ease-in-out;
-    will-change: transform;
-    transform-origin: 100% 100%;
-    &:last-of-type{
-      background: black;
-      transform-origin: 100% 100%;
-      transform: translate(-100%, -100%);
-      .line{
-        background: white;
-      }
-    }
-    .line{
-      position: absolute;
-      left: 10px;
-      bottom: 10px;
-      width: 50%;
-      height: 2px;
-      background: #222;
-      &:last-of-type{
-        left: initial;
-        right: 12px;
-        bottom: 10px;
-        width: 2px;
-        height: 50%;
-      }
-    }
-  }
+  cursor: pointer;
+  text-align: center;
   &:hover{
-    .intro_btn{
-      transform: translate(100%, 100%);
-      &:last-of-type{
-        transform: translate(0%, 0%);
-      }
-    }
+    background: #222;
+    color: white;
   }
 }
 
 
 #intro{
-  margin: 0 auto;
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  height: 100vh;
   .text_note{
     font-size: 1.5em;
     padding: 10px 15px;
@@ -234,9 +91,7 @@ section{
   }
   #text_container{
     display: flex;
-    height: 75px;
-    position: relative;
-    font-weight: 300;
+    font-weight: 700;
     font-size: 3em;
     justify-content: center;
     flex-wrap: wrap;
@@ -244,71 +99,43 @@ section{
     margin-bottom: 40px;
     .text_loader{
       position: absolute;
-      bottom: .5rem;
       width: 0;
+      bottom: 0;
       left: 50%;
       transform: translateX(-50%);
       height: 1px;
       transition: 230ms width cubic-bezier(0.75, 0, 0, 1);
-      background: #222222;
+      background: #222;
     }
     .letter_container{
       position: relative;
-      margin: 0 5px;
-      width: 50px;
-      transform-origin: 0 25%;
+      text-align: center;
       p{
         height: 100%;
         margin: 0;
         text-align: center;
-        width: 50px;
         opacity: .5;
         position: absolute;
-        //color: #404040;
         left: 25%;
         box-sizing:border-box;
-        filter: blur(1px);
-        //animation: swap .05s ease-out infinite alternate;
-        &:first-of-type{
-          transform: translate(-10px, 5px);
-          z-index: 5;
-          filter: blur(0px);
-        }
-        &:nth-of-type(2){
-          transform: translate(-15px, 7.25px);
-          z-index: 4;
-        }
-        &:nth-of-type(3){
-          transform: translate(-15px, 7.25px);
-          z-index: 3;
-        }
-        &:last-of-type{
-          transform: translate(-17px, 9px);
-          z-index: 2;
-        }
-        &.matched{
-          //color: #404040;
-          background: transparent;
-          animation: none;
-        }
       }
     }
   }
   @include media('<phone'){
+    .text_loader{
+      display: none;
+    }
     .text_note{
-      //font-size: 1.5em;
+      font-size: 1.5em;
     }
     #text_container{
-      //font-size: 1.75em;
+      padding-bottom: 0;
+      font-size: 2.25em;
       .letter_container{
         &.break{
           width: 100%;
           height: 0;
           opacity: 0;
-        }
-        width: 20px;
-        p{
-          width: 20px;
         }
       }
     }
@@ -322,9 +149,11 @@ h2{
   font-weight: 700;
   color: #222;
   position: relative;
+  @include media('<phone'){
+    text-align: center;
+  }
 }
 #projects{
-  //background: linear-gradient(45deg, #13547a, #80d0c7);
   .container{
     display: flex;
     flex-direction: column;
@@ -346,6 +175,7 @@ h2{
       padding: 10px;
       flex-basis: 33.3%;
       opacity: 1;
+      pointer-events: none;
       box-sizing:border-box;
       transform: translateX(0) translateY(0);
       will-change: transform, opacity, width, height;
@@ -356,10 +186,8 @@ h2{
         width: 100%;
         background-size: cover;
         background-position: center;
-        background-color: #222;
         border-radius: 5px;
         height: 100%;
-        border: 1px solid #ebebeb;
         .project-logo{
           position: absolute;
           max-height: 200px;
@@ -373,8 +201,6 @@ h2{
           width: 100%;
           z-index: 3;
           height: 100%;
-          //border: 2px solid #222;
-          //background: rgba(255,255,255,.5);
           box-sizing: border-box;
           opacity: 0;
           display: flex;
@@ -442,6 +268,7 @@ h2{
           transform: translateX(-100%);
           z-index: 2;
           background: rgba(255,255,255,1);
+          border: 1px solid #ebebeb;
           //-webkit-clip-path: polygon(0% 0%, 100% 0, 75% 100%, 0% 100%);
           //clip-path: polygon(0% 0%, 100% 0, 75% 100%, 0% 100%);
           >*{
@@ -456,47 +283,61 @@ h2{
               margin: 0;
             }
           }
-          .date, .tech, .desc{
+          .tech, .desc, .btn{
+            font-size: .85em;
             line-height: 24px;
             &:before{
               opacity: .5;
+              margin-right: 100%;
               font-weight: 700;
-              font-size: .85em;
+              padding-left: 20px;
+              content: 'Technologies: ';
+              background-size: 16px;
+              background-position: left center;
+              background-repeat: no-repeat;
+              margin-bottom: 5px;
             }
             &:first-of-type{
               margin-top: 0;
             }
           }
-          .date{
-            &:before{
-              content: 'When: ';
-            }
-          }
           .tech{
+            display: flex;
+            flex-wrap: wrap;
+            flex-direction: row;
+            span{
+              box-sizing: border-box;
+              margin: 3px 3px 0 0;
+              padding: 3px 7px;
+              border-radius: 3px;
+              border: 1px solid #222;
+            }
             &:before{
-              content: 'How: ';
+              background-image: url('../assets/img/tech_icon.svg');
+              content: 'Technologies: ';
             }
           }
           .desc{
             &:before{
-              content: 'What: ';
+              background-image: url('../assets/img/about_icon.svg');
+              content: 'About: ';
             }
           }
           .btn{
+            &:before{
+              background-image: url('../assets/img/link_icon.svg');
+              content: 'See it online: ';
+            }
             display: inline-block;
             a{
-              padding: 10px 15px;
               transition: .2s ease-out;
-              background: #222;
-              border-radius: 3px;
-              border: 1px solid #222;
-              color: white;
+              color: #222;
               text-decoration: none;
+              border-bottom: 1px dashed #222;
             }
             &:hover{
               a{
-                background: transparent;
-                color: #222;
+                border-bottom: 1px solid #222;
               }
             }
           }
@@ -509,7 +350,7 @@ h2{
           width:100%;
           display: flex;
           justify-content: space-between;
-          padding: 15px 25px;
+          padding: 15px 30px;
           transition: .2s ease-out;
           opacity: 0;
           pointer-events: none;
@@ -521,6 +362,7 @@ h2{
             &:before, &:after{
               padding: 7px;
               border: 1px solid #222;
+              border-radius: 3px;
             }
             &:before{
               content: '\2190';
@@ -538,7 +380,6 @@ h2{
           }
         }
         &:hover{
-          //box-shadow: 0px 0px 15px -5px #bbbbbb;
           .project-hover{
             opacity: 1;
           }
@@ -613,23 +454,54 @@ h2{
         }
       }
     }
-    &.initial{
-      .project-container{
-        position:relative!important;
-        left: initial!important;
-        top: initial!important;
-        width: initial!important;
-        height: initial!important;
-      }
-    }
     @include media('<tablet'){
       .project-container{
         flex-basis: 50%;
         padding: 0;
       }
     }
-    @include media('<phone'){
+  }
+  @include media('<phone'){
+    .container{
       max-height: 90vh;
+      .project-wrapper{
+        max-height: inherit;
+        .project-hover{
+          .full-screen-btn{
+            right: 7px !important;
+            top: 15px !important;
+            width: 24px!important;
+            height: 24px!important;
+            span{
+              border-color: #222!important;
+              height: 6px !important;
+              width: 6px !important;
+              margin: 3px !important;
+            }
+            z-index: 999;
+          }
+        }
+        .project-box{
+          border-radius: 0;
+          .project-logo{
+            max-height: 75px;
+          }
+          .project-content{
+            padding: 20px 15px;
+            border-radius: 0;
+            opacity: .85;
+          }
+          .project-controls{
+            padding: 15px !important;
+            .next{
+              color: #222!important;
+              &:after{
+                border-color: #222!important;
+              }
+            }
+          }
+        }
+      }
     }
   }
 }
@@ -688,16 +560,25 @@ h2{
       justify-content: center;
       a{
         position: relative;
-        width: 32px;
-        height: 32px;
+        width: 42px;
+        height: 42px;
         margin: 3px;
         transition: .2s ease-out;
+        background-size: 20px;
+        background-position: center;
+        background-repeat: no-repeat;
         border-radius: 50%;
         &.github{
-          background-image: url('../assets/img/github_icon.png');
+          background-image: url('../assets/img/github_icon.svg');
         }
         &.linkedin{
-          background-image: url('../assets/img/linkedin_icon.png');
+          background-image: url('../assets/img/linkedin_icon.svg');
+        }
+        &.mail{
+          background-image: url('../assets/img/mail_icon.svg');
+        }
+        &.phone{
+          background-image: url('../assets/img/phone_icon.svg');
         }
         &:before{
           content: attr(data-cta);
@@ -717,6 +598,7 @@ h2{
           pointer-events: none;
         }
         &:hover{
+          background-color: #dadada;
           &:before{
             transition: .25s cubic-bezier(0.19, 1, 0.22, 1);
             transform: translate(-50%, -30px);
@@ -724,6 +606,21 @@ h2{
             pointer-events: all;
           }
         }
+      }
+    }
+    @include media('<phone'){
+      .contact-wrapper{
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        article{
+          img{
+            max-width: 150px;
+          }
+        }
+      }
+      .social-wrapper{
+        bottom: 25px;
       }
     }
   }
