--- a/src/scss/_partials/_header.scss
+++ b/src/scss/_partials/_header.scss
@@ -5,10 +5,11 @@ nav{
   top: 10px;
   display: flex;
   justify-content: center;
-  z-index: 1;
+  z-index: 99;
   padding: 0 10px;
+  border-radius: 3px;
   a{
-    margin: 0;
+    cursor: pointer;
     color: #222;
     padding: 10px;
     position: relative;
@@ -18,15 +19,21 @@ nav{
     overflow: hidden;
     font-weight: 700;
     .nav-shadow{
-      will-change: left;
       background: #222;
       position: absolute;
       color: white;
+      opacity: 0;
       z-index: 2;
       left: 0;
-      opacity: 1;
+      border-radius: 3px;
+      will-change: transform;
       top: 0;
       padding: 10px;
+    }
+    &:first-of-type{
+      .nav-shadow{
+        opacity: 1;
+      }
     }
   }
 }
