--- a/src/scss/_body.scss
+++ b/src/scss/_body.scss
@@ -3,7 +3,7 @@ body,html{
   overflow-y: scroll;
   overflow-y: overlay;
   color: #222;
-  font-family: 'Montserrat';
+  font-family: 'Montserrat', sans-serif;
   font-size: 1em;
   @include media('<phone'){
     font-size: 14px;
@@ -46,6 +46,7 @@ html.sr .load-hidden{
 }
 section{
   height: 100vh;
+  min-height: 100vh;
   width: 100vw;
   position: relative;
 }
@@ -56,572 +57,21 @@ section{
   width: 100%;
 }
 
-.intro_btn{
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  border-radius: 2px;
-  padding: 10px 15px;
-  border: 1px solid #222;
-  transition: background .2s ease-in-out, color .1s ease-out;
-  bottom: 50px;
-  cursor: pointer;
-  text-align: center;
-  &:hover{
-    background: #222;
-    color: white;
-  }
-}
-
-
-#intro{
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  .text_note{
-    font-size: 1.5em;
-    padding: 10px 15px;
-    line-height: 1.33em;
-    max-width: 900px;
-    position: relative;
-    text-align: center;
-    color: #222;
-    font-weight: 300;
-  }
-  #text_container{
-    display: flex;
-    font-weight: 700;
-    font-size: 3em;
-    justify-content: center;
-    flex-wrap: wrap;
-    padding-bottom: 40px;
-    margin-bottom: 40px;
-    .text_loader{
-      position: absolute;
-      width: 0;
-      bottom: 0;
-      left: 50%;
-      transform: translateX(-50%);
-      height: 1px;
-      transition: 230ms width cubic-bezier(0.75, 0, 0, 1);
-      background: #222;
-    }
-    .letter_container{
-      position: relative;
-      text-align: center;
-      p{
-        height: 100%;
-        margin: 0;
-        text-align: center;
-        opacity: .5;
-        position: absolute;
-        left: 25%;
-        box-sizing:border-box;
-      }
-    }
-  }
-  @include media('<phone'){
-    .text_loader{
-      display: none;
-    }
-    .text_note{
-      font-size: 1.5em;
-    }
-    #text_container{
-      padding-bottom: 0;
-      font-size: 2.25em;
-      .letter_container{
-        &.break{
-          width: 100%;
-          height: 0;
-          opacity: 0;
-        }
-      }
-    }
-  }
-}
 h2{
   width: 100%;
   font-size: 2em;
   padding: 0 0 15px 10px;
   margin-bottom: 15px;
+  box-sizing:border-box;
   font-weight: 700;
   color: #222;
   position: relative;
   @include media('<phone'){
     text-align: center;
   }
-}
-#projects{
-  .container{
-    display: flex;
-    flex-direction: column;
-    top: 10vh;
-    position: relative;
-    position: relative;
-    max-height: 80vh;
-    justify-content: space-around;
-  }
-  .project-wrapper{
-    position: relative;
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: stretch;
-    .project-container{
-      padding: 10px;
-      flex-basis: 33.3%;
-      opacity: 1;
-      pointer-events: none;
-      box-sizing:border-box;
-      transform: translateX(0) translateY(0);
-      will-change: transform, opacity, width, height;
-      .project-box{
-        overflow: hidden;
-        cursor: pointer;
-        position: relative;
-        width: 100%;
-        background-size: cover;
-        background-position: center;
-        border-radius: 5px;
-        height: 100%;
-        .project-logo{
-          position: absolute;
-          max-height: 200px;
-          left: 50%;
-          top: 50%;
-          fill: white;
-          transform: translate(-50%, -50%);
-        }
-        .project-hover{
-          position: absolute;
-          width: 100%;
-          z-index: 3;
-          height: 100%;
-          box-sizing: border-box;
-          opacity: 0;
-          display: flex;
-          flex-direction: column;
-          justify-content: space-between;
-          align-items: flex-start;
-          transition: 250ms ease-out;
-          h5{
-            box-sizing: border-box;
-            font-weight: 700;
-            color: white;
-            padding: 25px;
-            transition: .2s ease-out;
-            font-size: 1.75em;
-            margin: 0;
-            text-align:left;
-            width: 100%;
-          }
-          .full-screen-btn{
-            position: absolute;
-            right: 25px;
-            top: 16px;
-            width: 36px;
-            height: 32px;
-            transition: .2s ease-out;
-            flex-wrap: wrap;
-            padding: 6px;
-            display: flex;
-            justify-content: space-between;
-            align-items: stretch;
-            &:hover{
-              transform: scale(1.2);
-            }
-            span{
-              height: 8px;
-              width: 8px;
-              box-sizing: border-box;
-              transition: .2s ease-out;
-              border: 2px solid #ebebeb;
-              margin: 5px;
-              position: relative;
-              &:first-of-type{
-                border-width: 2px 0 0 2px;
-              }
-              &:nth-of-type(2){
-                border-width: 2px 2px 0 0;
-              }
-              &:nth-of-type(3){
-                border-width: 0 0 2px 2px;
-              }
-              &:last-of-type{
-                border-width: 0 2px 2px 0;
-              }
-            }
-          }
-        }
-        .project-content{
-          padding: 25px 75px 25px 25px;
-          box-sizing: border-box;
-          position: relative;
-          height: 100%;
-          opacity: 0;
-          border-radius: 3px 0 0 3px;
-          will-change: transform, opacity;
-          transform: translateX(-100%);
-          z-index: 2;
-          background: rgba(255,255,255,1);
-          border: 1px solid #ebebeb;
-          //-webkit-clip-path: polygon(0% 0%, 100% 0, 75% 100%, 0% 100%);
-          //clip-path: polygon(0% 0%, 100% 0, 75% 100%, 0% 100%);
-          >*{
-            margin: .75em 0;
-            display: flex;
-            flex-direction: column;
-          }
-          li{
-            &:first-of-type{
-              font-weight: 700;
-              font-size: 1.75em;
-              margin: 0;
-            }
-          }
-          .tech, .desc, .btn{
-            font-size: .85em;
-            line-height: 24px;
-            &:before{
-              opacity: .5;
-              margin-right: 100%;
-              font-weight: 700;
-              padding-left: 20px;
-              content: 'Technologies: ';
-              background-size: 16px;
-              background-position: left center;
-              background-repeat: no-repeat;
-              margin-bottom: 5px;
-            }
-            &:first-of-type{
-              margin-top: 0;
-            }
-          }
-          .tech{
-            display: flex;
-            flex-wrap: wrap;
-            flex-direction: row;
-            span{
-              box-sizing: border-box;
-              margin: 3px 3px 0 0;
-              padding: 3px 7px;
-              border-radius: 3px;
-              border: 1px solid #222;
-            }
-            &:before{
-              background-image: url('../assets/img/tech_icon.svg');
-              content: 'Technologies: ';
-            }
-          }
-          .desc{
-            &:before{
-              background-image: url('../assets/img/about_icon.svg');
-              content: 'About: ';
-            }
-          }
-          .btn{
-            &:before{
-              background-image: url('../assets/img/link_icon.svg');
-              content: 'See it online: ';
-            }
-            display: inline-block;
-            a{
-              transition: .2s ease-out;
-              color: #222;
-              text-decoration: none;
-              border-bottom: 1px dashed #222;
-            }
-            &:hover{
-              a{
-                border-bottom: 1px solid #222;
-              }
-            }
-          }
-        }
-        .project-controls{
-          position: absolute;
-          z-index: 5;
-          box-sizing: border-box;
-          bottom: 18px;
-          width:100%;
-          display: flex;
-          justify-content: space-between;
-          padding: 15px 30px;
-          transition: .2s ease-out;
-          opacity: 0;
-          pointer-events: none;
-          right: 0;
-          span{
-            font-size: .85em;
-            letter-spacing: .1em;
-            color: #222;
-            &:before, &:after{
-              padding: 7px;
-              border: 1px solid #222;
-              border-radius: 3px;
-            }
-            &:before{
-              content: '\2190';
-            }
-            &.next{
-              color: white;
-              &:before{
-                display: none;
-              }
-              &:after{
-                content: '\2192';
-                border-color: white;
-              }
-            }
-          }
-        }
-        &:hover{
-          .project-hover{
-            opacity: 1;
-          }
-        }
-      }
-      &.active{
-        width: 100%;
-        height: 100%;
-        opacity: 1;
-        z-index: 1;
-        max-width: 100%;
-        .project-hover{
-          opacity: 1;
-          pointer-events: none;
-          h5,p{
-            color: #222;
-          }
-          .full-screen-btn{
-            pointer-events: all;
-            span{
-              transform: rotate(180deg);
-            }
-            &:hover{
-              transform: scale(.8);
-            }
-          }
-        }
-        .project-content{
-          opacity: 1;
-        }
-        .project-controls{
-          opacity: 1;
-          pointer-events: all;
-        }
-        .btn{
-          p{
-            transform: translate(20px, -50%) !important;
-            &:before, &:after{
-              content: '\2190' !important;
-              right: -20px!important;
-              position: absolute!important;
-            }
-            &:before{
-              transform: translateX(0px) !important;
-              opacity: 1!important;
-              right: initial!important;
-              left: -20px!important;
-            }
-            &:after{
-              transform: translateX(10px) !important;
-              opacity: 0!important;
-            }
-          }
-          &:hover{
-            p{
-              transform: translate(0, -50%)!important;
-              &:after{
-                transform: translateX(0)!important;
-                opacity: 1!important;
-              }
-              &:before{
-                transform: translateX(-10px)!important;
-                opacity: 0!important;
-              }
-            }
-          }
-        }
-      }
-      &:first-of-type{
-        .project-controls{
-          justify-content: flex-end;
-        }
-      }
-    }
-    @include media('<tablet'){
-      .project-container{
-        flex-basis: 50%;
-        padding: 0;
-      }
-    }
-  }
-  @include media('<phone'){
-    .container{
-      max-height: 90vh;
-      .project-wrapper{
-        max-height: inherit;
-        .project-hover{
-          .full-screen-btn{
-            right: 7px !important;
-            top: 15px !important;
-            width: 24px!important;
-            height: 24px!important;
-            span{
-              border-color: #222!important;
-              height: 6px !important;
-              width: 6px !important;
-              margin: 3px !important;
-            }
-            z-index: 999;
-          }
-        }
-        .project-box{
-          border-radius: 0;
-          .project-logo{
-            max-height: 75px;
-          }
-          .project-content{
-            padding: 20px 15px;
-            border-radius: 0;
-            opacity: .85;
-          }
-          .project-controls{
-            padding: 15px !important;
-            .next{
-              color: #222!important;
-              &:after{
-                border-color: #222!important;
-              }
-            }
-          }
-        }
-      }
-    }
-  }
-}
-#contact{
-  .container{
-    display: flex;
-    flex-direction: column;
-    top: 10vh;
-    position: relative;
-    max-height: 80vh;
-    justify-content: space-between;
-    .contact-wrapper{
-      display: flex;
-      >article{
-        flex-basis: 33.3%;
-        padding: 10px 15px;
-        img{
-          max-width: 300px;
-          border-radius: 50%;
-          height: auto;
-        }
-        p{
-          margin-top: 10px;
-
-        }
-        span{
-          line-height: 1.25em;
-          &:first-of-type{
-            color: #bbbbbb;
-            display: block;
-            font-weight: 700;
-            font-size: 1em;
-            margin-bottom: 10px;
-            padding-bottom: 10px;
-            border-bottom: 1px solid #ebebeb;
-          }
-          a{
-            text-decoration: none;
-            color: #222;
-            border-bottom: 1px dotted;
-            transition: .2s ease-out;
-            &:hover{
-              border-bottom-style: solid;
-            }
-          }
-        }
-        &:first-of-type{
-          span{
-            border: none;
-          }
-        }
-      }
-    }
-    .social-wrapper{
-      display: flex;
-      justify-content: center;
-      a{
-        position: relative;
-        width: 42px;
-        height: 42px;
-        margin: 3px;
-        transition: .2s ease-out;
-        background-size: 20px;
-        background-position: center;
-        background-repeat: no-repeat;
-        border-radius: 50%;
-        &.github{
-          background-image: url('../assets/img/github_icon.svg');
-        }
-        &.linkedin{
-          background-image: url('../assets/img/linkedin_icon.svg');
-        }
-        &.mail{
-          background-image: url('../assets/img/mail_icon.svg');
-        }
-        &.phone{
-          background-image: url('../assets/img/phone_icon.svg');
-        }
-        &:before{
-          content: attr(data-cta);
-          position: absolute;
-          top: -10px;
-          left: 50%;
-          transition: opacity .25s ease-out, transform .5s ease-in;
-          width: max-content;
-          transform: translate(-50%, -10px);
-          padding: 10px;
-          font-family: 'Montserrat';
-          color: white;
-          font-size: .85em;
-          background: #222;
-          opacity: 0;
-          border-radius: 3px;
-          pointer-events: none;
-        }
-        &:hover{
-          background-color: #dadada;
-          &:before{
-            transition: .25s cubic-bezier(0.19, 1, 0.22, 1);
-            transform: translate(-50%, -30px);
-            opacity: 1;
-            pointer-events: all;
-          }
-        }
-      }
-    }
-    @include media('<phone'){
-      .contact-wrapper{
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-        article{
-          img{
-            max-width: 150px;
-          }
-        }
-      }
-      .social-wrapper{
-        bottom: 25px;
-      }
-    }
+  @include media('<340px'){
+    font-size: 1.75em;
+    padding: 0 0 5px 10px;
+    margin-bottom: 10px;
   }
 }
