--- a/src/scss/_body.scss
+++ b/src/scss/_body.scss
@@ -9,6 +9,20 @@ body,html{
     font-size: 14px;
   }
 }
+::-webkit-scrollbar-thumb
+{
+  background-color: #373737;
+}
+::-webkit-scrollbar
+{
+  width: 6px;
+  background-color: #F5F5F5;
+}
+::-webkit-scrollbar-track
+{
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  background-color: #F5F5F5;
+}
 body{
   &:before{
     background-image: url('../assets/img/bg.png');
@@ -67,6 +81,7 @@ html.sr .load-hidden{
 }
 section{
   height: 100vh;
+  min-height: 100%;
   min-height: 100vh;
   width: 100vw;
   position: relative;
